fix(footer): 🐛 fix incorrect footer icon wrapping

--- a/resources/skins.citizen.styles/components/Footer.less
+++ b/resources/skins.citizen.styles/components/Footer.less
@@ -64,7 +64,6 @@
 	}
 
 	ul {
-		display: flex;
 		margin: 0;
 	}
 
@@ -111,9 +110,9 @@
 	}
 
 	&-icons {
-		display: flex;
-
 		ul {
+			display: flex;
+			flex-wrap: wrap;
 			gap: var( --space-xs );
 		}
 
